# optpilot

./: .gitignore  AGENTS.md  CLAUDE.md  cold_start_report_20260401.md  experiment_design.md  pyproject.toml  related_papers.md  test_rate_limit.py
dags/: ag2_mathchat.yaml  appworld_star.yaml  chatdev.yaml  hyperagent_hierarchical.yaml  magentic_one_star.yaml  simple_hierarchical_swebench.yaml  simple_star_gaia.yaml
docs/: OptPilot_Technical_Report.md  changelog_simplified_topologies.md
experiments/: EXPERIMENT_PLAN.md  analyze_openevolve_traces.py  build_ag2_6group_annotation_pack.py  case_study_shadow_gate_leakage.py  dashboard.py  evolve_config_adaevolve.yaml  exp1_targeted_repair.py  exp3_accumulation.py  exp4_ablation.py  exp5_offline_vs_online.py  exp_taxonomy_stability.py  launch_cold_start_16.sh  offline_pipeline.py  offline_yaml_pipeline.py  online_pipeline.py  openevolve_config.yaml  openevolve_evaluator.py  openevolve_evaluator_multi.py  openevolve_initial_dag.py  openevolve_initial_dag_agentcoder.py  openevolve_initial_dag_appworld.py  openevolve_initial_dag_hyperagent.py  openevolve_initial_dag_linear.py  openevolve_initial_dag_linear_loop.py  openevolve_initial_dag_magentic.py  openevolve_initial_dag_simple_hier.py  openevolve_initial_dag_simple_star.py  openevolve_initial_dag_star.py  openevolve_initial_dag_star_loop.py  reeval_test.py  run_ag2_6group_blind_models.py  run_ag2_fm13_offline_all.py  run_ag2_fm13_offline_batch.py  run_ag2_mathchat_baseline.py  run_ag2_mathchat_openevolve.py  run_ag2_mathchat_skill.py  run_evolve.py  run_openevolve.py  (+4 more)
(+622 files in other folders)
